--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
+
+  <script src="http://d3js.org/d3.v2.js"></script>
+  <script src="js/backbone.min.js"></script>
+
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
 	<h1>Hello, World!</h1>
