--- a/index.html
+++ b/index.html
@@ -10,11 +10,31 @@
 
   <script src="http://d3js.org/d3.v2.js"></script>
   <script src="js/backbone.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-	<h1>Hello, World!</h1>
+	<div class="static-modal">
+
+
+		<div class="modal" style="position: relative; top: auto; left: auto; margin: 0 auto; z-index: 1; max-width: 100%;">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">×</button>
+				<h3 class="project-name">Project Name <small class="charity-name">Charity Name</small></h3>
+			</div>
+			<div class="modal-body">
+				<p>One fine body…</p>
+			</div>
+			<div class="modal-footer">
+				<a href="#" class="btn">Close</a>
+				<a href="#" class="btn btn-primary">Save changes</a>
+			</div>
+		</div>
+
+
+
+	</div>
 </body>
 </html>
