--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <meta name="description" content="">
 
   <script src="http://d3js.org/d3.v2.js"></script>
-  <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-  <script src="js/backbone.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/application.js"></script>
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-	<div class="modal-test">
+	<div id="modal-test">
 
 
 
@@ -39,6 +39,6 @@
 			</div>
 		</div>
 	</script>
-
+	<script src="js/application.js"></script>
 </body>
 </html>
