--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -27,7 +28,7 @@
 				Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends.
 
 				<h3>Uuummmm, this is a tasty burger!</h3>
-				Now that there is the Tec-9, a crappy spray gun from <span class="project-info-trigger">South Miami</span>. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. 
+				Now that there is the Tec-9, a crappy spray gun from <span class="project-info-trigger" data-itai="GB-1-113933">Unicef Water and Sanitation</span>. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. 
 
 				<h3>Hold on to your butts</h3>
 				Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
@@ -82,13 +83,21 @@
 			</div>
 		</div>
 	</script>
+
 	<script type="application/x-underscore-template" id="project-popover-template">
-		<% if (name) { %>
-			Project Name
+		<% if (id) { %>
+			<%= id %>
 		<% } else { %>
-			NO NAME
+			ID Not Found
 		<% } %>
 	</script>
-	<script src="js/application.js"></script>
+
+	<script>
+		$(function() {
+			$('.project-info-trigger').projectViz();
+		});
+	</script>
+
+	<script src="js/projectviz.js"></script>
 </body>
 </html>
