improve transaction recieve sparql

--- a/index.html
+++ b/index.html
@@ -39,16 +39,18 @@
 	</script>
 
 	<script type="application/x-underscore-template" id="transaction-retrieve-sparql-template">
+		PREFIX owl: <http://www.w3.org/2002/07/owl#>
 		PREFIX dc: <http://purl.org/dc/elements/1.1/>
 		PREFIX iati: <http://tools.aidinfolabs.org/linked-iati/def/iati-1.01#>
 		PREFIX activity: <http://data.kasabi.com/dataset/iati/activity/>
-
-		SELECT * WHERE { 
-		  activity:<%= project_sub_id %> iati:transaction ?transaction.
-  
-		  ?transaction iati:transactionIsoDate ?date;
-               iati:value ?value;
-               dc:description ?description.
+		
+		SELECT * WHERE {
+		  { activity:<%= project_id %> iati:relatedActivity ?subid . }
+		  { ?subid owl:sameAs ?activity . }
+		  { ?activity iati:transaction ?transaction . }
+		  { ?transaction iati:transactionIsoDate ?date;
+		               iati:value ?value;
+		                 dc:description ?description . }
 		}
 	</script>
 
