--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.0.3/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0.beta6/handlebars.min.js"></script>
     <script src="js/sparql/sparql.js"></script>
 
     <link rel="stylesheet" href="css/style.css">
@@ -45,19 +46,19 @@
         PREFIX activity: <http://data.kasabi.com/dataset/iati/activity/>
 
         SELECT * WHERE { 
-            activity:<%= project_id %> dc:title ?title;
+            activity:{{{ project_id }}} dc:title ?title;
                        dc:description ?description.
-            activity:<%= project_id %> iati:relatedActivity ?relatedPlaceHolder.
+            activity:{{{ project_id }}} iati:relatedActivity ?relatedPlaceHolder.
             ?relatedPlaceHolder owl:sameAs ?related.
         }
     </script>
 
-    <script type="application/x-underscore-template" id="transaction-retrieve-sparql-template">
+    <script type="text/x-handlebars-template" id="transaction-retrieve-sparql-template">
         PREFIX iati: <http://tools.aidinfolabs.org/linked-iati/def/iati-1.01#>
         PREFIX activity: <http://data.kasabi.com/dataset/iati/activity/>
         
         SELECT * WHERE {
-          { activity:<%= project_id %> iati:relatedActivity ?subid . }
+          { activity: {{{ project_id }}} iati:relatedActivity ?subid . }
           { ?subid owl:sameAs ?activity . }
           { ?activity iati:transaction ?transaction . }
           { ?transaction iati:transactionIsoDate ?date;
@@ -66,8 +67,8 @@
         }
     </script>
 
-    <script type="application/x-underscore-template" id="project-view-template">
-        <div class="modal hide" id="<%= id %>">
+    <script type="text/x-handlebars-template" id="project-view-template">
+        <div class="modal hide" id="{{id}}">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">×</button>
                 <h3 class="project-name">Project Name <small class="charity-name">Charity Name</small></h3>
@@ -82,8 +83,8 @@
         </div>
     </script>
 
-    <script type="application/x-underscore-template" id="project-popover-template">
-        <%= description %>
+    <script type="text/x-handlebars-template" id="project-popover-template">
+        {{ description }}
     </script>
 
     <script>
