--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <h3>Aid Data in Context</h3>
                 <p>More and more data on aid activities is available in the common <a href="http://www.iatistandard.org">International Aid Transparency Initiative standard</a>, but to bring that data to life we need to take it from where it sits on the IATI Registry, and put it into context.</p>
 
-                <h3>Context widegets, linked data</h3>
+                <h3>Context widgets, linked data</h3>
                 <p>Roll your mouse over the link to
-                <a data-itai="GB-1-113933">
+                <a data-itai="44000-P048204">
                     Unicef Water and Sanitation
                 </a>
 				and you should see a pop up of information all about it. We're working to add more information to these pop-ups. The information comes direct from a <a href="http://kasabi.com/dataset/iati">Linked Data version of IATI data</a>, so that more data can be integrated in the future.</p>
