change name to oil project

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
                 <h2>Project Widgets</h2>
                 <hr/>
                 <h3>Aid Data in Context</h3>
-                <p>More and more data on aid activities is available in the common <a href="http://www.iatistandard.org">International Aid Transparency Initiative standard</a>, but to bring that data to life we need to take it from where it sits on the IATI Registry, and put it into context.</p>
+                <p>More and more data on aid activities is available in the common <a href="http://www.iatistandard.org">Petroleum Environment Capacity enhancement Project</a>, but to bring that data to life we need to take it from where it sits on the IATI Registry, and put it into context.</p>
 
                 <h3>Context widegets, linked data</h3>
-                Roll your mouse over the link to <a class="project-info-trigger" data-iati="44000-P048204">Unicef Water and Sanitation</a> and you should see a pop up of information all about it. We're working to add more information to these pop-ups. The information comes direct from a <a href="http://kasabi.com/dataset/iati">Linked Data version of IATI data</a>, so that more data can be integrated in future. 
+                Roll your mouse over the link to <a class="project-info-trigger" data-iati="44000-P048204">Petroleum Environment Capacity enhancement Project</a> and you should see a pop up of information all about it. We're working to add more information to these pop-ups. The information comes direct from a <a href="http://kasabi.com/dataset/iati">Linked Data version of IATI data</a>, so that more data can be integrated in future. 
 
                 <h3>Simple embedding</h3>
                 <p>To activate the tool simply add the relevent <code>data-itai</code> attribute to an element.</p>
                 
                 <pre class="prettyprint linenums">
-&lt;a data-itai=&quot;GB-1-113933&quot;&gt;
-    Unicef Water and Sanitation
+&lt;a data-itai=&quot;44000-P048204&quot;&gt;
+    Petroleum Environment Capacity enhancement Project
 &lt;/a&gt;</pre>
 
                 <h3>Get involved</h3>
