--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <script>
         $(function() {
-            $('.project-info-trigger').projectViz('http://api.kasabi.com/dataset/iati/apis/sparql?apikey=92912a588c30a6617ac21a69412b9a22f7f6e34d');
+            $('[data-iati]').projectViz('http://api.kasabi.com/dataset/iati/apis/sparql?apikey=92912a588c30a6617ac21a69412b9a22f7f6e34d');
         });
     </script>
 
