Made some more optionals

--- a/index.html
+++ b/index.html
@@ -48,18 +48,21 @@
     </div>
 
     <script type="application/x-underscore-template" id="project-retrieve-sparql-template">
-        SELECT * WHERE { 
-            activity:{{{ project_id }}} dc:title ?title;
-					dc:description ?description;
-					iati:recipientCountry ?recipientCountry;
-					iati:activityWebsiteUrl ?webSite;
-					iati:contactInfoOrganisation ?contactInfo.
+		SELECT * WHERE {
+		  activity:{{{ project_id }}} dc:title ?title;
+								   dc:description ?description;
+								   iati:activityWebsiteUrl ?webSite.
+		  
+		  OPTIONAL { activity:{{{ project_id }}} iati:recipientCountry ?recipientCountry. }
+		  OPTIONAL {
+			activity:{{{ project_id }}} iati:contactInfoOrganisation ?contactInfo.
 			?contactInfo dc:title ?contactTitle;
-					iati:contactInfoEmail ?contactEmail;
-					iati:contactInfoPerson ?contactPerson;
-					iati:contactInfoPhone ?contactPhone;
-					iati:contactInfoAddress ?contactAddress.
-        } 
+						 iati:contactInfoEmail ?contactEmail;
+						 iati:contactInfoPerson ?contactPerson;
+						 iati:contactInfoPhone ?contactPhone;
+						 iati:contactInfoAddress ?contactAddress.
+		  }
+		}
     </script>
 
 	<script type="text/x-handlebars-template" id="participant-retrieve-sparql-template">
