--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>More and more data on aid activities is available in the common <a href="http://www.iatistandard.org">Petroleum Environment Capacity enhancement Project</a>, but to bring that data to life we need to take it from where it sits on the IATI Registry, and put it into context.</p>
 
                 <h3>Context widgets, linked data</h3>
-                Roll your mouse over the link to <a class="project-info-trigger" data-iati="44000-P048204">Petroleum Environment Capacity enhancement Project</a> and you should see a pop up of information all about it. We're working to add more information to these pop-ups. The information comes direct from a <a href="http://kasabi.com/dataset/iati">Linked Data version of IATI data</a>, so that more data can be integrated in future. 
+                Roll your mouse over the link to <a data-iati="44000-P048204">Petroleum Environment Capacity enhancement Project</a> and you should see a pop up of information all about it. We're working to add more information to these pop-ups. The information comes direct from a <a href="http://kasabi.com/dataset/iati">Linked Data version of IATI data</a>, so that more data can be integrated in future. 
 
                 <h3>Simple embedding</h3>
                 <p>To activate the tool simply add the relevent <code>data-iati</code> attribute to an element.</p>
@@ -173,7 +173,7 @@
 
     <script>
         $(function() {
-            $('.project-info-trigger').projectViz('http://api.kasabi.com/dataset/iati/apis/sparql?apikey=92912a588c30a6617ac21a69412b9a22f7f6e34d');
+            $('[data-iati]').projectViz('http://api.kasabi.com/dataset/iati/apis/sparql?apikey=92912a588c30a6617ac21a69412b9a22f7f6e34d');
         });
     </script>
 
