--- a/index.html
+++ b/index.html
@@ -31,8 +31,19 @@
                 <p>More and more data on aid activities is available in the common <a href="http://www.iatistandard.org">Petroleum Environment Capacity enhancement Project</a>, but to bring that data to life we need to take it from where it sits on the IATI Registry, and put it into context.</p>
 
                 <h3>Context widgets, linked data</h3>
-                Roll your mouse over the link to <a data-iati="44000-P048204">Petroleum Environment Capacity enhancement Project</a> and you should see a pop up of information all about it. We're working to add more information to these pop-ups. The information comes direct from a <a href="http://kasabi.com/dataset/iati">Linked Data version of IATI data</a>, so that more data can be integrated in future. 
-
+                Roll your mouse over the links and you should see a pop up of information all about it. We're working to add more information to these pop-ups. The information comes direct from a <a href="http://kasabi.com/dataset/iati">Linked Data version of IATI data</a>, so that more data can be integrated in future. 
+                
+                <ul>
+                    <li>
+                        <a data-iati="44000-P048204">Petroleum Environment Capacity enhancement Project</a>
+                    </li>
+                    <li>
+                        <a data-iati="GB-1-201642-101">Systematic Review Pilot</a>
+                    </li>
+                    <li>
+                        <a data-iati="41AAA-00057337">Global Environment Facility (GEF) Small Grants Programme</a>
+                    </li>
+                </ul>
                 <h3>Simple embedding</h3>
                 <p>To activate the tool simply add the relevent <code>data-iati</code> attribute to an element.</p>
                 
