--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2>Project Widgets</h2>
                 <hr/>
                 <h3>Aid Data in Context</h3>
-                <p>More and more data on aid activities is available in the common <a href="http://www.iatistandard.org">Petroleum Environment Capacity enhancement Project</a>, but to bring that data to life we need to take it from where it sits on the IATI Registry, and put it into context.</p>
+                <p>More and more data on aid activities is available in the common <a href="http://www.iatistandard.org">IATI Standard</a>, but to bring that data to life we need to take it from where it sits on the IATI Registry, and put it into context.</p>
 
                 <h3>Context widgets, linked data</h3>
                 Roll your mouse over the links and you should see a pop up of information all about it. We're working to add more information to these pop-ups. The information comes direct from a <a href="http://kasabi.com/dataset/iati">Linked Data version of IATI data</a>, so that more data can be integrated in future. 
@@ -46,7 +46,7 @@
                 </ul>
                 
                 <h3>Simple embedding</h3>
-                <p>To activate the tool simply add the relevent <code>data-iati</code> attribute to an element.</p>
+                <p>To activate the tool simply add the relevant <code>data-iati</code> attribute to an element.</p>
                 
                 <pre class="prettyprint linenums">
 &lt;a data-iati=&quot;44000-P048204&quot;&gt;
@@ -162,7 +162,7 @@
     </script>
 
     <script type="text/x-handlebars-template" id="project-popover-template">
-	    <div id="map{{id}}" class="map"></div>
+	    <div class="map"></div>
         {{#if description}}
         <div class="popover-content-container">
             {{ description }}
