Added open data link

--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
             <h4>About</h4>
             <p>{{ description }}</p>
         </div>
+		<div class="modal-footer">
+			<a href="http://data.kasabi.com/dataset/iati/activity/{{id}}.html" target="_blank"><img border="0" src="http://assets.okfn.org/images/ok_buttons/od_80x15_blue.png" /></a>
+		</div>
     </script>
 
     <script type="text/x-handlebars-template" id="project-popover-template">
