styles for presentation

--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
 	            			<tr>
 		            			<td class="td0"></td>
 		            			<td class="td1"><div class="left-arrow"></div></td>
-		            			<td class="td2"><b>{{this.receiver}}</b><br><small>{{this.description}}</small></td>
+		            			<td class="td2"><b>{{this.receiver}}</b><br><small>{{this.description}}</small><br/><b>Amount: {{this.amount}}</b></td>
 		            		</tr>
 	            		{{else}}
 										<tr>
-		            			<td class="td0"><b>{{this.provider}}</b><br><small>{{this.description}}</small></td>
+		            			<td class="td0"><b>{{this.provider}}</b><br><small>{{this.description}}</small><br/><b>Amount: {{this.amount}}</b></td>
 		            			<td class="td1"><div class="right-arrow"></div></td>
 		            			<td class="td2"></td>
 		            		</tr>
