--- a/index.html
+++ b/index.html
@@ -178,6 +178,6 @@
         });
     </script>
 
-    <script src="js/projectviz.js"></script>
+    <script src="js/charityviz.js"></script>
 </body>
 </html>
