--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
                  dc:description ?description;
                  iati:providerOrg ?providerOrg;
                  iati:receiverOrg ?receiverOrg.
+          
+        {
+            select ?type where {
+                activity:{{{ project_id }}} iati:transaction ?trans .
+                ?trans iati:transactionType ?txtype  .
+                ?txtype skos:prefLabel ?type .
+            }
+        }
           {
             select ?providerTitle where {
               activity:{{{ project_id }}} iati:transaction ?trans .
