--- a/presentation.html
+++ b/presentation.html
@@ -54,7 +54,7 @@
 
     <div id="s4" class="step" data-x="0" data-y="0" data-scale="4">
         <h1>Introducing...</h1>
-        <span class="try">jquery.CharityViz.js</span>
+        <span class="try">charityviz.js</span>
     </div>
 
     <div id="s5" class="step" data-x="2500" data-y="0" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="100" data-scale="1">
@@ -95,8 +95,21 @@ $(function() {
 });</pre>
     </div>
 
-    <div id="s11" class="step" data-x="-1500" data-z="-2000" data-y="3000" data-rotate-z="90" data-scale="2">
-        A hack by @mikejewell, @graingert and @danpalmer
+    <div id="s11" class="step" data-x="-2000" data-z="-1500" data-y="3000" data-rotate-z="90" data-scale="2">
+        <p>We've got loads more data we can add, and we want to present this in a way that is accessible to everyone.<br/><br/></p>
+    </div>
+
+    <div id="s12" class="step" data-x="-3500" data-z="-1500" data-y="3000" data-rotate-z="90" data-scale="2">
+        <p>We hope we can work with the IATI in the future to make this happen and ensure that the project continues to evolve.</p>
+    </div>
+
+    <div id="s13" class="step" data-x="-5000" data-z="-1500" data-y="3000" data-rotate-x="90" data-rotate-z="0" data-scale="2">
+        <p>Thanks for watching.</p>
+        <a href="http://rhoksoton.github.com/CharityViz/">http://rhoksoton.github.com/CharityViz/</a><br/>
+        <br>by
+        <a href="http://twitter.com/mikejewell">@mikejewell</a>,
+        <a href="http://twitter.com/graingert">@graingert</a> and 
+        <a href="http://twitter.com/danpalmer">@danpalmer</a><br/>
     </div>
 
 </div>
