--- a/index.html
+++ b/index.html
@@ -163,9 +163,11 @@
             	</tbody>
             </table>
             {{/if}}
-            <hr/>
-            <h4>About</h4>
-            <p>{{ description }}</p>
+            {{#if description}} 
+                <hr/>
+                <h4>About</h4>
+                <p>{{ description }}</p>
+            {{/if}}
         </div>
 		<div class="modal-footer">
 			<a href="http://data.kasabi.com/dataset/iati/activity/{{id}}.html" target="_blank"><img border="0" src="http://assets.okfn.org/images/ok_buttons/od_80x15_blue.png" /></a>
