Added link to solution

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 &lt;/a&gt;</pre>
 
                 <h3>Get involved</h3>
-                Find <A href="https://github.com/rhoksoton/charityviz/">the source code on GitHub</a> and get involved in developing the project further. Developed as part of RHOK Southampton - June 2012. 
+                Find <a href="https://github.com/rhoksoton/charityviz/">the source code on GitHub</a> and get involved in developing the project further. Developed as part of RHOK Southampton - June 2012. See our <a href="http://www.rhok.org/solutions/charityviz-making-iati-data-easily-accessible-web-sites">solution page</a> for more information.
             </div>
         </div>
     </div>
