changed sparql endpoint, Fixes #4

--- a/presentation.html
+++ b/presentation.html
@@ -278,7 +278,7 @@ SELECT * WHERE {
 
 <script>
     $(function() {
-        $('[data-iati]').projectViz('http://api.kasabi.com/dataset/iati/apis/sparql?apikey=92912a588c30a6617ac21a69412b9a22f7f6e34d');
+        $('[data-iati]').projectViz('http://sparql.aidinfolabs.org/sparql/');
     });
 </script>
 <script src="js/charityviz.js"></script>
